--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,58 +1,135 @@
-.form{  
-  display: flex;
-  flex-direction: column;  
-  padding-left: 8px;
-  padding-right: 8px;
-  padding-bottom: 15px;
+.form__container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto; 
+  width: 100vw;
+  gap: 3px;
+  max-width: 720px;
+  padding: 4px;
+  box-sizing: border-box;
+  margin: auto;
   background-color: var(--background-color-02);
-  border-radius: 16px;
+  border-radius: 8px;
+  border: 1px solid var(--background-color-01);
 }
 
-.form__title{
-  color: var(--text-color-01);
-  font-weight: 800;
-  font-size: 2.2rem;
+.form__title{  
+  box-sizing: border-box;
+  grid-column: 1 / 5;  
   background-color: var(--background-color-01);
   color: var(--text-color-02);
-  width: 100%;
-  height: 80px;
-  padding-top: 20px;
   text-align: center;
-  border-radius: 10px;
-  margin-top: 5px;
-}
-
-.form__label{
+  font-size: 2.2rem;
+  font-weight: 600;  
+  height: 70px;
   width: 100%;
-  text-align: center;  
-  font-size: 1.1rem;
-  font-weight: 500;
-}
-
-.form__input, .form__button{  
-  height: 40px;
+  padding-top: 15px;
+  margin-bottom: 8px;
   border-radius: 8px;
   border: 1px solid black;
 }
 
-.form__fieldset{  
-  display: flex;
-  border: none;
-  margin-top: 10px;  
+.form__input{  
+  box-sizing: border-box;
+  height: 45px;
+  width: 95%;
+  border-radius: 8px;
+  border: 1px solid black;
+  text-align: center;
+  margin-bottom: 8px;
 }
 
-.form__logradouro, .form__cidade{
-  width: 85vw;
-  align-self: center;
-  box-sizing: border-box; 
+.form__label{  
+  box-sizing: border-box;
+  height: 15px;
+  width: 95%;
+  font-weight: 600;
 }
 
-.form__bairro, .form__bairro, .form__complemento, .form__estado, .form__CEP, .form__numero, .form__button{
-  width: 40vw; 
-  box-sizing: border-box; 
-  align-self: center;
+.label__zip-code{
+  grid-column: 1 / 3;  
+}
+
+.form__zip-code{
+  grid-column: 1 / 3;
+  grid-row: 3;
 }
 
 .form__button{
-  height: 60px;   
+  grid-column: 3 / 5;
+  grid-row: 2 / span 2;
+  border-radius: 8px;
+  width: 100%;
+  border: 1px solid black;
+  margin-bottom: 8px;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+
+.label__street{
+  grid-column: 1 / 4;
+  grid-row: 4;
+}
+
+.form__street{
+  grid-column: 1 / 4;
+  grid-row: 5;
+}
+
+.label__number{
+  grid-column: 4 / 5;
+  grid-row: 4;
+}
+
+.form__number{
+  grid-column: 4 / 5;
+  grid-row: 5;
+}
+
+.label__district{
+  grid-column: 1 / 3;
+  grid-row: 6;
+}
+
+.label__complement{
+  grid-column: 3 / 5;
+  grid-row: 6;
+}
+
+.form__district{
+  grid-column: 1 / 3;
+  grid-row: 7;
+}
+
+.form__complement{
+  grid-column: 3 / 5;
+  grid-row: 7;
+  width: 98%;
+}
+
+.label__city{
+  grid-column: 1 / 4;
+  grid-row: 8;
+}
+
+.label__state{
+  grid-column: 4 / 5;
+  grid-row: 8;
+}
+
+.form__city{
+  grid-column: 1 / 4;
+  grid-row: 9;
+}
+
+.form__state{
+  grid-column: 4 / 5;
+  grid-row: 9;
+}
+
+@media screen and (min-width: 480px) {
+  .form__container{
+    padding: 50px;
+    padding-top: 10px;
+  }  
 }
